--- a/Booklist/styles/style.scss
+++ b/Booklist/styles/style.scss
@@ -1,3 +1,61 @@
+@import "mixins";
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#root{
+  display: grid;
+  place-items: center;
+  margin-top: 20px;
+}
+
 body{
-  background-color: red;
+  font-family: arial;
+  background-color: rgb(228, 252, 245);
+}
+
+.booklist{
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 15px;
+  @include changeGridTemplate(1280px, 2);
+  @include changeGridTemplate(800px, 1);
+}
+
+.book{
+  width: 400px;
+  border: 3px solid rgb(233, 233, 233);
+  border-radius: 7px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  background-color: white;
+  img{
+    width: 100%;
+    margin-bottom: 5px;
+  }
+  h2{
+    font-size: 22px;
+    width: 90%;
+    color: rgb(28, 28, 28);
+    margin-bottom: 10px;
+  }
+  h1{
+    font-size: 20px;
+    font-weight: normal;
+    color: rgb(12, 12, 66);
+  }
+}
+
+.title{
+  font-size: 40px;
+  color: rgb(12, 12, 66);
+  margin-bottom: 20px;
 }
