--- a/Booklist/styles/style.scss
+++ b/Booklist/styles/style.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Lato:wght@700&family=Poppins:wght@300;400;700&family=Roboto:wght@400;500;700&display=swap');
 
 *{
   margin: 0;
@@ -9,21 +10,27 @@
 #root{
   display: grid;
   place-items: center;
-  margin-top: 20px;
 }
 
 body{
-  font-family: arial;
+  font-family: 'Poppins', sans-serif;
   background-color: rgb(228, 252, 245);
+  padding-bottom: 50px;
+  padding-top: 20px;
 }
 
 .booklist{
   width: 90%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 15px;
+  row-gap: 20px;
   @include changeGridTemplate(1280px, 2);
   @include changeGridTemplate(800px, 1);
+}
+.booklist-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .book{
@@ -33,29 +40,59 @@ body{
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding-bottom: 15px;
   padding-top: 15px;
   background-color: white;
+  align-items: center;
+  position: relative;
   img{
     width: 100%;
-    margin-bottom: 5px;
-  }
-  h2{
-    font-size: 22px;
-    width: 90%;
-    color: rgb(28, 28, 28);
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
   h1{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: normal;
-    color: rgb(12, 12, 66);
+    color: rgb(71, 71, 71);
   }
 }
 
+.title-wrapper{
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  h2{
+    font-size: 22px;
+    color: rgb(28, 28, 28);
+  }
+}
 .title{
   font-size: 40px;
   color: rgb(12, 12, 66);
   margin-bottom: 20px;
 }
+
+.rank-wrapper{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  overflow: hidden;
+  height: 30px;
+  .purple-square{
+    height: 100%;
+    width: 30px;
+    background-color: rgb(142, 116, 170);
+    color: white;
+    display: grid;
+    place-items: center;
+  }
+  .purple-triangle{
+    width: 0;
+    height: 0;
+    border-right: 20px solid transparent;
+    border-top: 35px solid rgb(211, 151, 191);
+  }
+}
+
